@@ -353,7 +353,7 @@ while( 1 )
 			foreach my $session ( sort @sessions )
 			{
 				# $session->get_database->set_debug( 1 );
-				my $sql = "SELECT UNIX_TIMESTAMP(NOW()), field FROM indexqueue ORDER BY added LIMIT 10";
+				my $sql = "SELECT UNIX_TIMESTAMP(NOW()), field FROM index_queue ORDER BY added LIMIT 10";
 				my $sth = $session->get_database->prepare( $sql );
 				$session->get_database->execute( $sth, $sql );
 				my( $now, $field ) = @_;
@@ -399,7 +399,7 @@ while( 1 )
 				# always remove them, even if they didn't index right.
 				foreach my $fieldcode ( keys %todo )
 				{
-					my $sql = "DELETE FROM indexqueue where field=\"$fieldcode\" AND added<FROM_UNIXTIME($now-1)";
+					my $sql = "DELETE FROM index_queue where field=\"$fieldcode\" AND added<FROM_UNIXTIME($now-1)";
 					$session->get_database->do( $sql );
 				}
 				
